@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942)
+	- Fixed left overhang of large chracters in Fl_Input_ (STR #941)
 	- Fixed button resizing in File Chooser (STR #884)
 	- Fixed Fluid redraw issue (STR #912)
 	- Added 32bit BMP Image file format support (STR #918)
